# hollyland-widget

./: CLAUDE.md  README.md  install.sh  pyproject.toml
.githooks/: pre-commit
plugin/: BarWidget.qml  BatteryGraph.qml  Main.qml  Panel.qml  manifest.json
plugin/qml/: HollylandBar.qml  HollylandPanel.qml  TxTheme.js
scripts/: check_all.sh  install_git_hooks.sh  lint_qml.py  render_widget_screenshots.py  scaffold_plugin.py  setup_noctalia_qml_imports.py  validate_plugin.py
service/: hollyland-widget-service  hollyland_api.py  hollyland_models.py  hollyland_protocol.py  hollyland_usb.py  hollyland_widget_alerts.py  hollyland_widget_power.py
systemd/: hollyland-widget.service
tests/python/: test_hollyland_api.py  test_hollyland_widget_alerts.py  test_hollyland_widget_power.py
